--- a/build.gradle
+++ b/build.gradle
@@ -8,12 +8,14 @@ repositories {
 
 dependencies {
     testImplementation (
-            "org.apache.poi:poi:5.0.0",
-            'net.lingala.zip4j:zip4j:2.9.0',
-            "com.codeborne:selenide:5.23.0",
+            "org.apache.poi:poi:4.1.2",
+            "org.apache.poi:poi-ooxml:4.1.2",
+            "org.apache.pdfbox:pdfbox:2.0.24",
+            "net.lingala.zip4j:zip4j:2.9.0",
             "com.codeborne:pdf-test:1.6.1",
             "com.codeborne:xls-test:1.4.3",
             "org.assertj:assertj-core:3.19.0",
+            "com.codeborne:selenide:5.23.0",
             "org.junit.jupiter:junit-jupiter-api:5.7.1",
             "org.junit.jupiter:junit-jupiter-params:5.7.1")
     testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.7.1"
